# anemone

./: .gitignore  Cargo.toml  README.md  config.yaml
crates/anemone-core/: Cargo.toml
crates/anemone-core/src/: brain.rs  config.rs  events.rs  identity.rs  lib.rs  memory.rs  prompts.rs  providers.rs  types.rs
crates/anemone-core/src/tools/: mod.rs  movement.rs  respond.rs  shell.rs  web.rs
crates/anemone-tui/: Cargo.toml
crates/anemone-tui/src/: app.rs  main.rs
crates/anemone-tui/src/ui/: chat.rs  input.rs  mod.rs  room.rs  setup.rs  status.rs  switcher.rs
crates/anemone-web/: Cargo.toml
crates/anemone-web/frontend/: Cargo.toml  index.html
crates/anemone-web/frontend/src/: api.rs  main.rs  ws.rs
crates/anemone-web/frontend/src/components/: chat_feed.rs  game_world.rs  input_bar.rs  mod.rs  switcher.rs
crates/anemone-web/src/: main.rs
crates/anemone-web/src/server/: api.rs  mod.rs  ws.rs
patterns/: README.md
patterns/drain/: distill_surface.md  extract_core_fact.md  summarize_midwater.md
patterns/immune/: detect_drift.md  verify_claims.md
patterns/research/: analyze_paper.md  capture_thinker.md  extract_patterns.md  extract_wisdom.md
