[workspace]
resolver = "2"
members = [
    "crates/anemone-core",
    "crates/anemone-tui",
    "crates/anemone-web",
]
exclude = [
    "crates/anemone-web/frontend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# LLM providers
rig-core = { version = "0.11", features = ["all"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Crypto
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
