[package]
name = "anemone-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "anemone-tui"
path = "src/main.rs"

[dependencies]
anemone-core = { path = "../anemone-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
